fix(styles): reduce text-underline-offset to avoid overflow
take 2 (3b82840cd251815f8daf5c08ba9fb54ed5b2c6d9)

不是很懂这个设多少比较靠谱（

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@ html:root {
 }
 
 * {
-  text-underline-offset: 0.25em;
+  text-underline-offset: 0.2em;
 }
 
 .flex > [class*="i-mdi-"] {
